[gd_scene load_steps=12 format=2]

[ext_resource path="res://addons/glam/controls/spinner/spinner.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/glam/controls/audio_stream_editor/audio_stream_editor.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/glam/icons/icon_resource_preloader.svg" type="Texture" id=3]
[ext_resource path="res://addons/glam/util/cacheable_http_request.gd" type="Script" id=4]
[ext_resource path="res://addons/glam/controls/thumbnail/thumbnail.gd" type="Script" id=5]
[ext_resource path="res://addons/glam/controls/preview_image.gd" type="Script" id=6]
[ext_resource path="res://addons/glam/controls/ellipsis_label.gd" type="Script" id=7]
[ext_resource path="res://addons/glam/icons/icon_status_success.svg" type="Texture" id=8]
[ext_resource path="res://addons/glam/icons/icon_asset_lib.svg" type="Texture" id=9]
[ext_resource path="res://addons/glam/icons/icon_progress_8.svg" type="Texture" id=10]
[ext_resource path="res://addons/glam/icons/icon_progress_7.svg" type="Texture" id=11]

[node name="Thumbnail" type="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 731.2
rect_min_size = Vector2( 0, 1331.2 )
focus_mode = 1
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = -3.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_" type="Control" parent="_"]
margin_right = 1018.0
margin_bottom = 1283.0
mouse_filter = 1
size_flags_vertical = 3

[node name="AudioStreamEditor" parent="_/_" instance=ExtResource( 2 )]
margin_bottom = -25.0

[node name="PreviewImage" type="TextureRect" parent="_/_"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
expand = true
stretch_mode = 6
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spinner" parent="_/_/PreviewImage" instance=ExtResource( 1 )]
visible = false
show_behind_parent = true
margin_left = -8.0
margin_top = -10.0
margin_right = 8.0
margin_bottom = 10.0
texture = ExtResource( 11 )

[node name="HBoxContainer" type="HBoxContainer" parent="_/_"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -22.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="_/_/HBoxContainer"]
margin_right = 16.0
margin_bottom = 22.0
grow_vertical = 0
rect_min_size = Vector2( 0, 22 )
texture = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_" type="HBoxContainer" parent="_/_/HBoxContainer"]
margin_left = 20.0
margin_right = 1018.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 22 )
size_flags_horizontal = 3
size_flags_vertical = 5
alignment = 2

[node name="DownloadButton" type="Button" parent="_/_/HBoxContainer/_"]
margin_left = 950.0
margin_right = 978.0
margin_bottom = 22.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 0, 22 )
hint_tooltip = "Download asset."
focus_mode = 0
mouse_filter = 1
icon = ExtResource( 9 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="TextureRect" parent="_/_/HBoxContainer/_"]
margin_left = 982.0
margin_right = 998.0
margin_bottom = 22.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 0, 22 )
texture = ExtResource( 8 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownloadSpinner" parent="_/_/HBoxContainer/_" instance=ExtResource( 1 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 982.0
margin_top = 0.0
margin_right = 998.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 22 )
texture = ExtResource( 10 )

[node name="DisplayName" type="Label" parent="_"]
margin_top = 1287.0
margin_right = 1018.0
margin_bottom = 1301.0
mouse_filter = 1
size_flags_horizontal = 3
align = 1
valign = 1
clip_text = true
script = ExtResource( 7 )

[node name="FormatOptionButton" type="OptionButton" parent="_"]
modulate = Color( 1, 1, 1, 0.498039 )
margin_left = 473.0
margin_top = 1305.0
margin_right = 544.0
margin_bottom = 1325.0
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 8
text = "1K-JPG"
flat = true
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CacheableHTTPRequest" type="HTTPRequest" parent="."]
use_threads = true
script = ExtResource( 4 )

[connection signal="pressed" from="_/_/HBoxContainer/_/DownloadButton" to="." method="_on_DownloadButton_pressed"]
[connection signal="item_selected" from="_/FormatOptionButton" to="." method="_on_FormatOptionButton_item_selected"]
